begin conversion to twig templates, fix panel redirect bug

--- a/panel/reuse/login_form/valid_login.html
+++ b/panel/reuse/login_form/valid_login.html
@@ -1,2 +1,2 @@
 <div class="alert alert-success">Login succeeded, <a href="panel.php">redirecting now.</div>
-<meta http-equiv="refresh" content="1; /panel/panel.php">
+<meta http-equiv="refresh" content="1; panel.php">
