--- a/panel/reuse/banner.html
+++ b/panel/reuse/banner.html
@@ -1,5 +1,5 @@
 <div class="row">
     <div>
-        <a href="/panel"><h1 class="text-center">perusal</h1></a>
+        <a href="panel.php"><h1 class="text-center">perusal</h1></a>
     </div>
 </div>
